--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ header{
     text-decoration: none;
     font-size: 18px;
     color: white;
+    transition: font-size 0.5s ease-in-out 0s;
 }
 .right-nav ol li a:hover{
     color: rgb(133, 133, 184);
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 .first-section{
     margin:20px;
